[package]
name = "fuel-debugger"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["env", "derive"] }
fuel-core-client = "0.40.0"
fuel-types = "0.58.2"
fuel-vm = "0.58.2"
fuel-asm = "0.58.2"
serde_json = "1.0"
shellfish = { version = "0.6.0", features = ["rustyline", "async", "tokio"] }
surf = "2.3"
thiserror = "1.0"
tokio = { version = "1.19", features = ["net", "io-util", "macros", "rt-multi-thread"] }
rustyline = "14.0.0"
yansi = "1.0.1"

[dev-dependencies]
anyhow = "1.0" # Used by the examples only
escargot = "0.5.7"
portpicker = "0.1.1"
rexpect = "0.4"
